--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,4 +7,14 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
   
+container_commands:
+  collectstatic:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
+  01_syncdb:
+    command: "python3 manage.py migrate --run-syncdb --noinput"
+    leader_only: true
+  02_load_data:
+    command: "python3 manage.py loaddata data.json --noinput"
+    leader_only: true
+  
 
