--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -9,12 +9,12 @@ option_settings:
   
 container_commands:
   collectstatic:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic --noinput"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic"
   01_syncdb:
-    command: "python3 manage.py migrate --run-syncdb --noinput"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --run-syncdb"
     leader_only: true
   02_load_data:
-    command: "python3 manage.py loaddata data.json --noinput"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py loaddata data.json"
     leader_only: true
   
 
