update db settings config

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -10,11 +10,20 @@ option_settings:
 container_commands:
   collectstatic:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py collectstatic"
-  01_syncdb:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate --run-syncdb"
+  01_makemigrations:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations"
     leader_only: true
-  02_load_data:
-    command: "source /var/app/venv/*/bin/activate && python3 manage.py loaddata data.json"
+  02_migrate:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate"
     leader_only: true
+  03_createuser:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py createsuperuser --username admin --password admin --email foo@foo.foo"
+    leader_only: true
+  04_loaddata:
+   command: "source /var/app/venv/*/bin/activate && python3 manage.py loaddata ./data.json"
+    leader_only: true
+
+
+  
   
 
