--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -20,7 +20,7 @@ container_commands:
     command: "source /var/app/venv/*/bin/activate && python3 manage.py createsuperuser --username admin --password admin --email foo@foo.foo"
     leader_only: true
   04_loaddata:
-   command: "source /var/app/venv/*/bin/activate && python3 manage.py loaddata ./data.json"
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py loaddata data.json"
     leader_only: true
 
 
