--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -6,7 +6,20 @@ option_settings:
     WSGIPath: "Webproject.wsgi:application"
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
-
+  
+container_commands:
+  01_makemigrations:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py makemigrations"
+    leader_only: true
+  02_migrate:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py migrate"
+    leader_only: true
+  03_createuser:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py createsuperuser --username admin --password admin --email foo@foo.foo"
+    leader_only: true
+  04_loaddata:
+    command: "source /var/app/venv/*/bin/activate && python3 manage.py loaddata data.json"
+    leader_only: true
 
 
   
