change django.config and settings.py

--- a/.ebextensions/django.config
+++ b/.ebextensions/django.config
@@ -7,6 +7,14 @@ option_settings:
   aws:elasticbeanstalk:environment:proxy:staticfiles:
     /static: static
   
+container_commands:
+  01_makemigrations:
+    command: "source /var/app/venv/*/bin/activate && python manage.py makemigrations"
+    leader_only: true
+  02_migrate:
+    command: "source /var/app/venv/*/bin/activate && python manage.py migrate"
+    leader_only: true
+  
 
 
   
